--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-local": "npm-run-all --parallel watch:build watch:server",
-    "deploy-in-heroku": "npm run build && git add . && git commit -m 'subida' && git push heroku master",
+    "start-local": "run-p watch:build watch:server",
     "build": "cross-env NODE_ENV=production webpack",
     "watch:server": "nodemon \"./build/bundle.js\" --watch \"./build\"",
     "watch:build": "cross-env NODE_ENV=development webpack --watch",
@@ -14,39 +13,37 @@
   "author": "Pablo Monteserín",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.5.5",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "easy-ftp": "^0.4.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^6.3.3",
-    "socket.io": "^2.3.0",
-    "swagger-jsdoc": "^4.0.0",
-    "swagger-ui-express": "^4.1.4"
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5",
+    "socket.io": "^3.0.4",
+    "swagger-jsdoc": "^5.0.1",
+    "swagger-ui-express": "^4.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/plugin-transform-spread": "^7.2.2",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/plugin-transform-spread": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/runtime": "^7.12.5",
     "babel-cli": "^6.26.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.6",
-    "cross-env": "^5.2.0",
-    "nodemon": "^1.19.1",
-    "terser-webpack-plugin": "^1.3.0",
-    "webpack": "^4.37.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.6",
     "npm-run-all": "4.1.5",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-node-externals": "^1.7.2"
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-node-externals": "^2.5.2"
   }
 }
