--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start-local": "run-p watch:build watch:server",
     "build": "cross-env NODE_ENV=production webpack",
-    "watch:server": "nodemon \"./build/bundle.js\" --watch \"./build\"",
+    "watch:server": "nodemon \"./build/bundle.js\"",
     "watch:build": "cross-env NODE_ENV=development webpack --watch",
     "start": "node ./build/bundle.js"
   },
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.6",
     "sequelize": "^6.3.5",
     "socket.io": "^3.0.4",
     "swagger-jsdoc": "^5.0.1",
@@ -38,7 +39,6 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.6",
     "npm-run-all": "4.1.5",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
