--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "dotenv-webpack": "^7.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.6",
-    "nodemon-webpack-plugin": "^4.5.2",
     "sequelize": "^6.3.5",
     "socket.io": "^3.0.4",
     "swagger-jsdoc": "^5.0.1",
@@ -38,11 +37,11 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "cross-env": "^7.0.3",
-    "npm-run-all": "4.1.5",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-node-externals": "^2.5.2"
+    "webpack-node-externals": "^2.5.2",
+    "nodemon": "^2.0.6",
+    "nodemon-webpack-plugin": "^4.5.2"
   }
 }
