--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "sequelize": "^6.3.5",
     "socket.io": "^3.0.4",
     "swagger-jsdoc": "^5.0.1",
-    "swagger-ui-express": "^4.1.5"
+    "swagger-ui-express": "^4.1.5",
+    "@babel/runtime": "^7.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
