--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-PORT = 5000
 DB_HOST = [host]
 DB_USER = [user]
 DB_PASSWORD = [password]
 DB_NAME = [name]
-DB_FORCECLEAN = true
+DB_FORCE_CLEAN = true
