--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+# DATABASE
 DB_HOST = [host]
 DB_USER = [user]
 DB_PASSWORD = [password]
 DB_NAME = [name]
 DB_FORCE_CLEAN = true
+
+# APP
+PORT = 5000
