--- a/package.json
+++ b/package.json
@@ -11,37 +11,37 @@
   "author": "Pablo Monteserín",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.15.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "dotenv-webpack": "^7.0.2",
+    "dotenv": "^8.6.0",
+    "dotenv-webpack": "^7.0.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5",
-    "socket.io": "^3.0.4",
+    "mysql2": "^2.3.0",
+    "sequelize": "^6.6.5",
+    "socket.io": "^3.1.2",
     "swagger-jsdoc": "^5.0.1",
-    "swagger-ui-express": "^4.1.5",
-    "@babel/runtime": "^7.12.5"
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/plugin-transform-spread": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.15.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/plugin-transform-spread": "^7.14.6",
+    "@babel/preset-env": "^7.15.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "webpack": "^5.10.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-node-externals": "^2.5.2",
-    "nodemon": "^2.0.6",
-    "nodemon-webpack-plugin": "^4.5.2"
+    "nodemon": "^2.0.13",
+    "nodemon-webpack-plugin": "^4.5.2",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-node-externals": "^2.5.2"
   }
 }
