--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ DB_FORCE_CLEAN = true
 
 # APP
 PORT = 5000
+
+#AUTH0
+JWKS_URI = [JWKS_URI]
+AUTH0_DOMAIN = [AUTH0_DOMAIN]
+AUTH0_CLIENT_ID = [AUTH0_CLIENT_ID]
+AUTH0_SECRET = [AUTH0_SECRET]
+AUTH0_AUDIENCE = [AUTH0_AUDIENCE]
