--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Pablo Monteserín",
   "license": "ISC",
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "@babel/runtime": "^7.15.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -18,6 +19,7 @@
     "dotenv-webpack": "^7.0.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.5",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
     "socket.io": "^3.1.2",
